--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -20,3 +20,7 @@ jobs:
         distribution: 'adopt'
     - name: Run tests
       run: sbt test
+    - name: Create test report
+      run: sbt jacoco
+    - name: Send report
+      run: sbt jacocoCoveralls
