--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -20,6 +20,10 @@ jobs:
         distribution: 'adopt'
     - name: Run tests
       run: sbt test
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.COVERALLS_TOKEN }}
     - name: Create report
       run: sbt jacoco
     - name: Send report
