--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -18,9 +16,23 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Run tests
-      run: sbt test
-    - name: Create test report
-      run: sbt jacoco
-    - name: Send report
-      run: sbt jacocoCoveralls
+    - name: Compile
+      run: sbt compile
+
+  tests:
+    runs-on: ubuntu latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build project and export Coverage to Coveralls
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+        run: |
+          export CI_BRANCH="${GITHUB_REF#refs/heads/}"
+          sbt clean jacoco jacocoCoveralls
+      - name: Download Codecov
+        run: curl -Os https://uploader.codecov.io/latest/linux/codecov
+      - name: Add x flag
+        run: chmod +x codecov
+      - name: Run Codecov
+        run: ./codecov -t ${{ secrets.CODECOV_TOKEN }}
