--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -20,7 +20,7 @@ jobs:
       run: sbt compile
 
   tests:
-    runs-on: ubuntu latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Build project and export Coverage to Coveralls
