--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Add x flag
         run: chmod +x codecov
       - name: Run Codecov
-        run: ./codecov -f
+        run: ./codecov -f target\scala-3.1.0\jacoco\report\html\*
