--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Add x flag
         run: chmod +x codecov
       - name: Run Codecov
-        run: ./codecov
+        run: ./codecov -s target\test-reports
