--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -26,8 +26,12 @@ jobs:
       - uses: codecov/codecov-action@v2
       - name: Clean
         run: sbt clean
-      - name: Build project and get test reports
+      - name: Create test reports
         run: sbt jacoco
+      - name: Send reports to Coveralls
+        env:         
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: sbt jacocoCoveralls
       - name: Download Codecov
         run: curl -Os https://uploader.codecov.io/latest/linux/codecov
       - name: Add x flag
